edit client registration file

--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -64,6 +64,8 @@
                 {{form.username}}
               </div>
               <input type="button" style="border-radius: 5px;" name="next" class="next action-button" value="Next" />
+              <h4>Have an account already?</h4>
+              <a style="border-radius: 50px;" class="text-dark dropdown-item" href="{% url 'client_login' %}">Client Login</a>
             </fieldset>
             <fieldset>
               <div class="form-card">
@@ -126,6 +128,7 @@
               </div>
               <button class="btn btn-primary btn-sm btn-sm mt-4 previous" style="margin-top:10px;border-radius: 0px;" type="button" name="previous">Back</button>
               <button class="btn btn-primary btn-sm btn-sm mt-4" style="margin-top:10px;border-radius: 0px;" type="submit">Finish</button>
+              
             </fieldset>
           </form>
         </div>
