edit staff login form

--- a/templates/staff_login.html
+++ b/templates/staff_login.html
@@ -16,7 +16,7 @@
         <div class="row align-items-center justify-content-center">
             <div class="col-md-6 mt-lg-5 text-center">
                 <br><br>
-                <h1>Client Login</h1>
+                <h1>Staff Login</h1>
                 <div style="margin-bottom: 10px;">
                 </div>
             </div>
