Add client request summaries page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -111,7 +111,7 @@
             <li><a href="/units/book/" class="nav-link">Book Now</a></li>
             <li><a href="services/" class="nav-link">Services</a></li>
             <li><a href="/records" class="nav-link">Records</a></li>
-            <li><a href="/" class="nav-link">News</a></li>
+            <li><a href="/delivery/transport-summaries/" class="nav-link">Transport Summary</a></li>
             <li><a href="/" class="nav-link">About</a></li>
             {% if user.is_authenticated %}
             {% else %}
