Add a creation date

--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -22,7 +22,9 @@
                             <h3 class="card-title">Transport Request Summary</h3><hr>
                             <p class="card-text"><strong>FIRST NAME: </strong>{{request_transport.user.first_name}}</p>
                             <p class="card-text"><strong>LAST NAME: </strong>{{request_transport.user.last_name}}</p>
-                            <p class="card-text"><strong>TYPE OF REQUEST: </strong>{{request_transport.transport_type|upper}}</p><hr>
+                            <p class="card-text"><strong>TYPE OF REQUEST: </strong>{{request_transport.transport_type|upper}}</p>
+                            <p class="card-text"><strong>DATE: </strong>{{request_transport.created}}</p>
+                            <hr>
                             <h4><strong>Address Details</strong></h4>
                             <p class="card-text"><strong>ADDRESS: </strong>{{request_transport.address}}</p>
                             <p class="card-text"><strong>DISTANCE: </strong>{{request_transport.distance}} km</p><hr>
