--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -64,8 +64,8 @@
                 {{form.username}}
               </div>
               <input type="button" style="border-radius: 5px;" name="next" class="next action-button" value="Next" />
-              <h4>Have an account already?</h4>
-              <a style="border-radius: 50px;" class="text-dark dropdown-item" href="{% url 'client_login' %}">Client Login</a>
+              <!-- <h4>Have an account already?</h4>
+              <a style="border-radius: 50px;" class="text-dark dropdown-item" href="{% url 'client_login' %}">Client Login</a> -->
             </fieldset>
             <fieldset>
               <div class="form-card">
