Include bills payment page

--- a/templates/request_transport.html
+++ b/templates/request_transport.html
@@ -16,7 +16,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Would you Like to Request Transport Services?</h5>
                         <button type="button" class="btn btn-primary card-link" onclick="transportFunction()">YES</button>
-                        <a href="{%url 'dashboard'%}" class="card-link btn btn-outline-danger">NO</a>
+                        <a href="{%url 'payment'%}" class="card-link btn btn-outline-danger">NO</a>
                     </div>
                 </div>
             </div>
