--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -63,9 +63,9 @@
                 <label class="fieldlabels">User Name: *</label>
                 {{form.username}}
               </div>
-              <input type="button" style="border-radius: 5px;" name="next" class="next action-button" value="Next" />
-              <!-- <h4>Have an account already?</h4>
-              <a style="border-radius: 50px;" class="text-dark dropdown-item" href="{% url 'client_login' %}">Client Login</a> -->
+              <small class="text-left">Already have an account ?</small>
+              <a class="text-info" href="{% url 'client_login' %}">Login</a>
+              <input type="button" style="border-radius: 5px;margin-right: 180px;" name="next" class="next action-button" value="Next" />
             </fieldset>
             <fieldset>
               <div class="form-card">
