--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
           <div class="row">
             <div class="col-md-5">
               <h2 class="footer-heading mb-4">About Us</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+              <p>We provide a range of storage facilities based on the type of goods that clients need to be stored</p>
             </div>
             <div class="col-md-3 mx-auto">
               <h2 class="footer-heading mb-4">Quick Links</h2>
