edit information on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-12 mt-lg-5 ">
             <h1 class="text-shadow">Secure <br> Storage For Your goods</h1>
-            <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ...<a href="" target="_blank">store.com</a>
+            <p class="mb-5 text-shadow">Keeping goods safe from damage,loss or theft ...<a href="" target="_blank">store.com</a>
             </p>
             <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
@@ -36,8 +36,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-12 mt-lg-5 ">
-            <h1 class="text-shadow">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. </h1>
-            <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ... <a href="/"
+            <h1 class="text-shadow">Improve workflow <br> of your entire <br> facility. </h1>
+            <p class="mb-5 text-shadow">Using a warehouse to manage orders improves the workflow of your entire facility.... <a href="/"
                 target="_blank">store.com</a> </p>
             <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
@@ -56,8 +56,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-12 mt-lg-5 ">
-            <h1 class="text-shadow">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. </h1>
-            <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ... <a href="/"
+            <h1 class="text-shadow">Faster shipping<br> and <br> delivery </h1>
+            <p class="mb-5 text-shadow">Packing your products up in the same warehouse they were received in allows shipping to effortlessly handle their part... <a href="/"
                 target="_blank">store.com</a> </p>
             <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
@@ -76,8 +76,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-12 mt-lg-5 ">
-            <h1 class="text-shadow">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. </h1>
-            <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ... <a href="/"
+            <h1 class="text-shadow">Task <br>  Delegation <br> </h1>
+            <p class="mb-5 text-shadow">By warehousing your products, you delegate the former responsibilities to staff members.... <a href="/"
                 target="_blank">store.com</a> </p>
             <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
@@ -96,8 +96,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-12 mt-lg-5 ">
-            <h1 class="text-shadow">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. </h1>
-            <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ... <a href="/"
+            <h1 class="text-shadow">Close to  <br>target <br>market . </h1>
+            <p class="mb-5 text-shadow">This supports fast shipping and easy returns--two factors that customers have high standards for.... <a href="/"
                 target="_blank">store.com</a> </p>
             <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
@@ -116,8 +116,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-12 mt-lg-5 ">
-            <h1 class="text-shadow">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. </h1>
-            <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ... <a href="/"
+            <h1 class="text-shadow">Control <br> over <br>products . </h1>
+            <p class="mb-5 text-shadow">Keeping all of your product stock in a warehouse allows you to maintain control over it... <a href="/"
                 target="_blank">store.com</a> </p>
             <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
@@ -145,11 +145,11 @@
           Better yet, you'll reduce shrinkage and shipping costs!</p><br>
 
         <ul class="list-unstyled ul-check success">
-          <li>Placeat maxime animi minus</li>
-          <li>Dolore qui placeat maxime</li>
-          <li>Consectetur adipisicing</li>
-          <li>Lorem ipsum dolor</li>
-          <li>Placeat molestias animi</li>
+          <li>Protection and Preservation of goods </li>
+          <li>Regular flow of goods </li>
+          <li>Continuity in production</li>
+          <li>Useful for small businesspersons</li>
+          <li>Reduces risk of loss </li>
         </ul>
 
         <p><a href="/" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
@@ -183,7 +183,7 @@
           <span class="text-black">01.</span>
           <span class="custom-icon flaticon-house text-black"></span>
           <h3 class="text-black">Find <br> Your Space.</h3>
-          <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p class="text-black">A client gets to book a number of units of a storage type based on the available units</p>
         </div>
       </div>
 
@@ -192,7 +192,7 @@
           <span class="text-black">02.</span>
           <span class="custom-icon flaticon-coin text-black"></span>
           <h3 class="text-dark">Choose <br> Your Storage Plan.</h3>
-          <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p class="text-black">A client gets to choose the type of storage based on the goods that need to be stored.</p>
         </div>
       </div>
 
@@ -201,7 +201,7 @@
           <span class="text-black">03.</span>
           <span class="custom-icon flaticon-home text-black"></span>
           <h3 class="text-dark">Outstanding & Economical <br> Space Utilisation .</h3>
-          <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p class="text-black">Adequate space for storage of goods when they are not required for sale.</p>
         </div>
       </div>
     </div>
