add about section id on navbar link about

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -112,7 +112,7 @@
             <li><a href="services/" class="nav-link">Services</a></li>
             <li><a href="/records" class="nav-link">Records</a></li>
             <li><a href="/" class="nav-link">News</a></li>
-            <li><a href="/" class="nav-link">About</a></li>
+            <li><a href="#howitworks-section" class="nav-link">About</a></li>
             {% if user.is_authenticated %}
             {% else %}
             <li><a href="/client_register/" class="nav-link">Register</a></li>
