change javascripts logics

--- a/templates/base.html
+++ b/templates/base.html
@@ -125,9 +125,11 @@
 
         // calculate the total on date change
         var charge = 0;
-        $("#storage_type").change(function () {
+        $("#id_storage_type").change(function () {
             var element = $(this).find('option:selected');
-            charge = element.attr("charge");
+            value= element.attr("value")
+            console.log(typeof value)
+            charge = parseInt(element.attr("charge"));
           });
           
 
@@ -137,16 +139,13 @@
           var arrival = $('#arrival_date').val();
           
           var units = $('#no_of_units').val();
-          console.log(charge);
+          //console.log(typeof charge);
 
         
-          console.log(units);
+         // console.log(units);
           no_of_days = findDayDifference(departure, arrival)
           total_cost = no_of_days * charge * units;
-          $('#total_cost').attr('value', total_cost
-
-
-          );
+          $('#total_cost').attr('value', total_cost);
 
         }
 
