--- a/templates/booking.html
+++ b/templates/booking.html
@@ -25,6 +25,18 @@
 </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- <div class="container mt-4">
     <form action="" method="POST" id="storage">
         {% csrf_token %}
@@ -36,7 +48,7 @@
 
 
 
-
+<!-- 
 <div class="container-fluid" style="background-color: rgb(213, 255, 255);">
     <div id="booking" class="section">
         <div class="section-center">
@@ -48,18 +60,26 @@
                         </div>
                         <form action="" method="POST" enctype="multipart/form-data" id="storage">
                             {% csrf_token %}
-                            <div class="form-group"> <select class="form-control"  name="storage_type" id="storage_type" required>
-                                    <option value=""  selected hidden>Choose Storage Type</option>
+                            <div class="form-group"> <select class="form-control" name="storage_type" id="storage_type"
+                                    required>
+                                    <option value="" selected hidden>Choose Storage Type</option>
                                     {% for storage_type in storage_types %}
                                     <option charge="{{storage_type.charge}}">{{storage_type}}</option>
                                     {% endfor %} <br>
-                                </select> <span class="select-arrow"></span> <span class="form-label">Storage</span> </div>
-                            <div class="form-group">
-                                <input type="number" min="1" name="no_of_units" id="no_of_units" placeholder="number of units">
+                                </select> <span class="select-arrow"></span> <span class="form-label">Storage</span>
+                            </div>
+                            <div class="row">
+                                <span class="form-label text-info"></span>
+                                <div class="col-sm-6">
+                                    <div class="form-group"><input class="form-control" type="number" min="1"
+                                            name="no_of_units" id="no_of_units" placeholder="number of units">
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <textarea style="border-radius: 5px;" name="description" id="description"
-                                    class="form-control" cols="30" rows="10" placeholder="Goods description..."></textarea>
+                                    class="form-control" cols="30" rows="10"
+                                    placeholder="Goods description..."></textarea>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
@@ -76,7 +96,8 @@
                             <div class="row">
                                 <span class="form-label text-info"></span>
                                 <div class="col-sm-6">
-                                    <div class="form-group"><input class="form-control " type="text" readonly placeholder="Your Total Cost In Kshs" id="total_cost">
+                                    <div class="form-group"><input class="form-control " type="text" readonly
+                                            placeholder="Your Total Cost In Kshs" id="total_cost">
                                     </div>
                                 </div>
                             </div>
@@ -88,7 +109,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 
