--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -6,6 +6,27 @@
 {% endblock %}
 {% block content %}
 
+
+<div class="overlay"
+    style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;"
+    data-aos="fade" id="home-section">
+
+
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-6 mt-lg-5 text-center">
+                <br><br>
+                <h1>Edit Profile</h1>
+                <div style="margin-bottom: 10px;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <a href="#eprofile" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
+</div>
+
+
 <section id="eprofile" class="vh-100" style="background-color: #f4f5f7;">
 
     <div class="container">
@@ -31,24 +52,6 @@
 
 
 
-<div class="overlay"
-    style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;"
-    data-aos="fade" id="home-section">
-
-
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="col-md-6 mt-lg-5 text-center">
-                <br><br>
-                <h1>Edit Profile</h1>
-                <div style="margin-bottom: 10px;">
-                </div>
-            </div>
-        </div>
-    </div>
-    <br><br>
-    <a href="#eprofile" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
-</div>
 
 
 
@@ -84,7 +87,7 @@
 
 
 
-<section id="eprofile" class="vh-100" style="background-color: #f4f5f7;">
+<!-- <section id="eprofile" class="vh-100" style="background-color: #f4f5f7;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-lg-6 mb-4 mb-lg-0">
@@ -132,6 +135,6 @@
         </div>
     </div>
     </div>
-</section>
+</section> -->
 
 {% endblock %}
