--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -115,9 +115,7 @@
             <li><a href="/" class="nav-link">News</a></li>
             <li><a href="#howitworks-section" class="nav-link">About</a></li>
 
-            <li><a href="/delivery/transport-summaries/" class="nav-link">Transport Summary</a></li>
-            <li><a href="/" class="nav-link">About</a></li>
-
+            <li><a href="/delivery/transport-summaries/" class="nav-link">Convey Summary</a></li>
             {% if user.is_authenticated %}
             {% else %}
             <li><a href="/client_register/" class="nav-link">Register</a></li>
@@ -145,7 +143,6 @@
                 aria-labelledby="navbarDropdown">
                 {% if user.is_authenticated %}
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/profile/">Profile</a>
-                <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/edit_profile/">Edit Profile</a>
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/change_password/">Change Password</a>
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/logout/">Logout</a>
                 {% else %}
@@ -155,7 +152,10 @@
                 {% endif %}
               </div>
             </li>
+            {% if user.is_authenticated %}
             <li><a href="" class="nav-link open-button"><strong>?</strong></a></li>
+            {% else %}
+            {% endif %}
           </ul>
         </nav>
       </div>
