update staff profile

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -145,7 +145,7 @@
                 aria-labelledby="navbarDropdown">
                 {% if user.is_authenticated %}
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/profile/">Profile</a>
-                <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/edit_profile/">Edit Profile</a>
+                <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/update_staff_profile/">Edit Staff Profile</a>
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/change_password/">Change Password</a>
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/logout/">Logout</a>
                 {% else %}
