--- a/templates/profile.html
+++ b/templates/profile.html
@@ -53,7 +53,7 @@ background: #212529b8;
           <div class="card mb-3" style="border-radius: .5rem;">
             <div class="row g-0">
               {% if profile.profile_photo %}
-                <img src="{{profile.profile_photo.url}}" alt="" style="border-radius: 50%; width: 50%; height: auto;">
+                <img src="{{client.profile_photo.url}}" alt="" style="border-radius: 50%; width: 50%; height: auto;">
                 {%else%}
                 <img src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg"
                     class="card-img-top" alt="My profile picture"  style="border-radius: 50%; width: 50%; height: auto;">
