--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer" style="margin-bottom: 100px;margin-top: 00px;">
+<footer class="site-footer" style="margin-bottom: 300px;">
     <div class="container" >
       <div class="row">
         <div class="col-md-8">
