--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -109,7 +109,7 @@
           <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
             <li><a href="/" class="nav-link">Home</a></li>
             <li><a href="/units/book/" class="nav-link">Book Now</a></li>
-            <li><a href="services/" class="nav-link">Services</a></li>
+            <li><a href="/" class="nav-link">Services</a></li>
             <li><a href="/records" class="nav-link">Records</a></li>
 
             <li><a href="/" class="nav-link">News</a></li>
