--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -56,16 +56,13 @@
                     <h2 class="steps">Step 1 - 4</h2>
                   </div>
                 </div>
-                <label class="fieldlabels">First Name: *</label> 
-                {{form.first_name|add_class:"flow"}}
-                <label class="fieldlabels">Last Name: *</label>
-                {{form.last_name}}
-                <label class="fieldlabels">User Name: *</label>
-                {{form.username}}
+                {% render_field form.first_name|append_attr:"" placeholder="First Name" %}
+                {% render_field form.last_name|append_attr:"" placeholder="Last Name" %}
+                {% render_field form.username|append_attr:"" placeholder="User Name" %}
+                <small class="text-left">Already have an account ?</small>
+                <a class="text-info" href="{% url 'client_login' %}">Login</a>
               </div>
-              <small class="text-left">Already have an account ?</small>
-              <a class="text-info" href="{% url 'client_login' %}">Login</a>
-              <input type="button" style="border-radius: 5px;margin-right: 180px;" name="next" class="next action-button" value="Next" />
+              <input type="button" style="border-radius: 5px;" name="next" class="next action-button" value="Next" />
             </fieldset>
             <fieldset>
               <div class="form-card">
@@ -95,12 +92,9 @@
                     <h2 class="steps">Step 3 - 4</h2>
                   </div>
                 </div>
-                <label class="fieldlabels">Email.: *</label>
-                {{form.email}}
-                <label class="fieldlabels">Location:</label>
-                {{form.location}}
-                <label class="fieldlabels">Phone:</label>
-                {{form.phone}}
+                {% render_field form.email|append_attr:"" placeholder="Email" %}
+                {% render_field form.location|append_attr:"" placeholder="Your Location" %}
+                {% render_field form.phone|append_attr:"" placeholder="Phone No" %}
               </div>
               <input type="button" style="border-radius: 5px;" name="next" class="next action-button" value="Next" />
               <input style="margin-left: 10px;border-radius: 5px;" type="button" name="previous" class="previous float-left action-button-previous " value="Previous" />
